# hw2_group

./: CMakeLists.txt  main.c  main.cu  makefile  pgmProcess.cu  pgmProcess.h  pgmUtility.c  pgmUtility.h  pgmUtilityGPU.cu  pgmUtilityGPU.h  ~$CD445hw2.docx
